<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">mainPage</string>
    <string name="hello_world">Vado</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_org_pg">orgPg</string>
    <string name="title_activity_main_screen_student">mainScreenStudent</string>
    <string name="title_activity_search">search</string>


    //human code stuffs
    <string name="outreach">Outreach</string>
    <string name="american">American</string>
    <string name="outdoors">Outdoors</string>
    <string name="service">Service</string>
    <string name="thon">THON</string>
    <string name="health">Health</string>
    <string name="engineering">Engineering</string>
    <string name="space">Space</string>
    <string name="computer">Computer</string>
    <string name="programming">Programming</string>
    <string name="fraternity">Fraternity</string>
    <string name="sorority">Sorority</string>
    <string name="science">Science</string>
    <string name="music">Music</string>
    <string name="politics">Politics</string>
    <string name="food">Food</string>
    <string name="education">Education</string>
    <string name="leadership">Leadership</string>
    <string name="marital">Martial Arts</string>
    <string name="title_activity_event_page">eventPage</string>
    <string name="title_activity_show_org">showOrg</string>


</resources>
