<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="wrap_content"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".userLogin">

    <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:textSize="24dp"
        android:textIsSelectable="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText2"
        android:layout_alignParentStart="true"
        android:text="Search"
        android:layout_toStartOf="@+id/button"
        android:layout_below="@+id/textView" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Search"
        android:id="@+id/button"
        android:layout_alignParentEnd="true"
        android:layout_alignBottom="@+id/editText2" />

    <GridLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/editText2"
        android:layout_alignParentStart="true"
        android:rowCount="10"
        android:columnCount="4">

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/thon"
            android:id="@+id/checkBox"
            android:layout_row="1"
            android:layout_column="0" />

        <Space
            android:layout_width="140px"
            android:layout_height="20px"
            android:layout_row="0"
            android:layout_column="1" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/engineering"
            android:id="@+id/checkBox2"
            android:layout_row="1"
            android:layout_column="3"
            android:layout_gravity="left" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/outreach"
            android:id="@+id/checkBox3"
            android:layout_row="2"
            android:layout_column="0" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/computer"
            android:id="@+id/checkBox4"
            android:layout_row="2"
            android:layout_column="3"
            android:layout_gravity="left"
            android:checked="false" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/marital"
            android:id="@+id/checkBox5"
            android:layout_row="3"
            android:layout_column="0" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/programming"
            android:id="@+id/checkBox6"
            android:layout_row="3"
            android:layout_column="3"
            android:layout_gravity="left"
            android:checked="false" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/leadership"
            android:id="@+id/checkBox7"
            android:layout_row="4"
            android:layout_column="0"
            android:checked="false" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/outdoors"
            android:id="@+id/checkBox8"
            android:layout_row="4"
            android:layout_column="3"
            android:layout_gravity="left"
            android:checked="false" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fraternity"
            android:id="@+id/checkBox9"
            android:layout_row="5"
            android:layout_column="0" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/science"
            android:id="@+id/checkBox10"
            android:layout_row="5"
            android:layout_column="3"
            android:layout_gravity="left"
            android:checked="false" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sorority"
            android:id="@+id/checkBox11"
            android:layout_row="6"
            android:layout_column="0" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/space"
            android:id="@+id/checkBox12"
            android:layout_row="6"
            android:layout_column="3"
            android:layout_gravity="left"
            android:checked="false" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/health"
            android:id="@+id/checkBox13"
            android:layout_row="7"
            android:layout_column="0" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/music"
            android:id="@+id/checkBox14"
            android:layout_row="7"
            android:layout_column="3"
            android:layout_gravity="left"
            android:checked="false" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/food"
            android:id="@+id/checkBox15"
            android:layout_row="8"
            android:layout_column="0" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/politics"
            android:id="@+id/checkBox16"
            android:layout_row="8"
            android:layout_column="3"
            android:layout_gravity="left"
            android:checked="false" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/american"
            android:id="@+id/checkBox17"
            android:layout_row="9"
            android:layout_column="0" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/education"
            android:id="@+id/checkBox18"
            android:layout_row="9"
            android:layout_column="3"
            android:layout_gravity="left"
            android:checked="false" />

    </GridLayout>

</RelativeLayout>
